added links to home

--- a/index.html
+++ b/index.html
@@ -11,10 +11,27 @@
   <body>
     <h1>3D Programming ISR</h1>
     <div>
-      <h3>Project 1:</h3>
+      <h3>Project 1: Obelisk</h3>
       <ul>
         <li><a href="proj1/obeslisk.html">Obelisk demo</a></li>
+        <li>
+          <a
+            href="https://github.com/hsharriman/3dprogramming/blob/master/proj1/obeslisk.html"
+            >Code for Obelisk</a
+          >
+        </li>
         <li><a href="proj1/math.md">Math problems</a></li>
+      </ul>
+      <h3>Project 2: Clown</h3>
+      <ul>
+        <li><a href="proj2/clown2.html">Clown demo</a></li>
+        <li>
+          <a
+            href="https://github.com/hsharriman/3dprogramming/blob/master/proj2/clown2.html"
+            >Code for Clown</a
+          >
+        </li>
+        <li><a href="proj2/math.md">Math problems</a></li>
       </ul>
     </div>
   </body>
