--- a/proj2/clown2.html
+++ b/proj2/clown2.html
@@ -346,7 +346,7 @@
         minz: -15,
         maxz: 15,
       });
-      TW.toggleAxes("show");
+      // TW.toggleAxes("show");
 
       // ================================================================
       function rebuild() {
