initial koch implementation

--- a/raymarching/index.html
+++ b/raymarching/index.html
@@ -223,7 +223,7 @@
 
       rm = new RayMarcher()
         .setSize(w, h)
-        .loadFragmentShader("glsl/sphere.glsl", animate);
+        .loadFragmentShader("glsl/frac1.glsl", animate);
       document.body.appendChild(rm.domElement);
 
       composer = new Composer(rm);
